Added: /get-project call, Changed: get via index, align api with people package.
